@@ -1,0 +1,7 @@
+1 4
+0 0
+1 4
+1 1
+2 0
+5 5
+6 6
