@@ -671,6 +671,8 @@ int igraph_union_many(igraph_t *res, igraph_vector_ptr_t *graphs);
 int igraph_intersection(igraph_t *res, igraph_t *left, igraph_t *right);
 int igraph_intersection_many(igraph_t *res, igraph_vector_ptr_t *graphs);
 int igraph_difference(igraph_t *res, igraph_t *orig, igraph_t *sub);
+int igraph_complementer(igraph_t *res, igraph_t *graph, bool_t loops);
+int igraph_compose(igraph_t *res, igraph_t *g1, igraph_t *g2);
 
 /* -------------------------------------------------- */
 /* Dynamics measurement                               */
