@@ -1,3 +1,8 @@
+2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/operators.R (graph.compose, "%c%") : added
+	* interfaces/R/src/rinterface.c (R_igraph_compose) : added
+
 2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/operators.R (graph.complementer) : added
