@@ -1,3 +1,8 @@
+2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/operators.c (igraph_compose) : added
+	* examples/simple/igraph_compose.c : added
+
 2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/operators.c (igraph_complementer) : added
